<resources>
    <string name="app_name">GeoReminderr</string>
    <string name="new_employee">Nowe Przypomnienie</string>
    <string name="not_available">brak</string>
    <string name="add_action">Dodaj</string>
    <string name="action_setting">Ustawienia</string>
    <string name="title_activity_maps">Map</string>
    <string name="buttonToMap">Lokalizacja</string>
    <string name="location_permission_denied"><![CDATA[This sample requires location permission to enable the \\\'my location\\\' layer. Please try again and grant access to use the location.\\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \\\'Google Maps API Demos\\\'.]]></string>
    <string name="permission_required_toast"><![CDATA[This sample requires location permission to enable the \\\'my location\\\' layer. Please try again and grant access to use the location.\\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \\\'Google Maps API Demos\\\'.]]></string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \\\'my location\\\' feature, which shows your current location on the map.</string>
    <string name="tap_instructions">Tap or long press on the map</string>
    <string name="move_the_camera">Move the camera</string>
    <string name="ChooseLocation">Wybierz te lokalizacje</string>
    <string name="location">Lokalizacja</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call</string>
    <string name="unknown_geofence_error">nknown error: the Geofence service is not available now</string>
    <string name="geofence_transition_entered">UWAGA</string>
    <string name="geofence_transition_exited">EXITED</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_transition_notification_text">Geofence transition error: invalid transition type %1$d</string>
    <string name="geofence_transition_invalid_type">Geofence transition error: invalid transition type %1$d</string>
    <string name="geofences_added">geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="action_turnOfReminder">Turn of Reminderr</string>
    <string name="action_turnOnReminder">Turn On Reminderr</string>
    <string name="takePicture">Zrób Zdjęcie</string>
    <string name="album_name">Camera Sample</string>
    <string name="cannot">Can not</string>
</resources>
