<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.uj.android.employees.MainActivity" >

    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_alarm_add_black_24dp"
        android:title="@string/add_action"/>


    <item android:id="@+id/turnOnReminder"
        android:title="@string/action_turnOnReminder"
        android:orderInCategory="100"
        android:icon="@drawable/ic_alarm_on_black_24dp"
        android:showAsAction="always"></item>

    <item android:id="@+id/turnOffReminder"
        android:title="@string/action_turnOfReminder"
        android:orderInCategory="100"
        android:icon="@drawable/ic_alarm_off_black_24dp"
        android:showAsAction="always"></item>




</menu>
