<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ReminderDetailsActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/fieldTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Title"
                >
            </EditText>

            <EditText
                android:id="@+id/fieldDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Description"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/byttonToMap"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonToMap"
                    android:onClick="goToMap"
                    android:layout_weight="1"/>


                <Button
                    android:id="@+id/buttonTakePhoto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/takePicture"
                    android:layout_weight="1"

                    />



            </LinearLayout>



            <TextView
                android:id="@+id/fieldCooridnates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:onClick="takePhoto"
                />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

</LinearLayout>
